# fin_ws

./: README.md  clear_all_setup.sh  coppy_raspy.sh  nav_forward.sh  nav_rotate.sh  nav_square.sh
src/diff_drive/: CMakeLists.txt
src/diff_drive/nodes/: diff_drive_go_to_goal
src/diff_drive/src/diff_drive/: goal_controller.py
src/diffdrive_controller/src/: diffdrive_controller.py
src/diffdrive_odom/src/: diffdrive_odom.py
src/fin_controller/: CMakeLists.txt  package.xml
src/fin_controller/src/: fin_controller.py
src/fin_description/: CMakeLists.txt  package.xml
src/fin_description/launch/: fin_interface.launch  fin_rviz.launch  robot.rviz
src/fin_description/urdf/: fin.xacro
src/fin_starter/: CMakeLists.txt  README.md  package.xml
src/fin_starter/config/: robot.yaml
src/fin_starter/launch/: Master.launch  MasterFisheye.launch  pure_pursuit.launch  raspy.launch  raspyCam.launch  raspyCamFisheye.launch  raspyMotor.launch  rqt_gui_default.perspective
src/fin_state_updater/: CMakeLists.txt  package.xml
src/fin_state_updater/src/: fin_state_updater.py
src/gopigo_controller/src/: gopigo_controller.py
src/gopigo_description/launch/: gopigo_interface.launch  gopigo_rviz.launch  robot.rviz
src/gopigo_state_updater/src/: gopigo_state_updater.py
src/motor/: CMakeLists.txt  package.xml
src/motor/scripts/: motor.py
src/motor/src/: Kalman.hpp  motor.cpp  rotary_encoder.cpp  rotary_encoder.hpp
src/motor_cpp/src/: motor.cpp
src/nav_behaviors/launch/: nav_behaviors.launch
src/nav_behaviors/src/: nav_timed.py
(+1 files in other folders)
